# app

./: .gitattributes  .gitignore  .sops.yaml  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  nogo.json  pacta.go
.github/workflows/: ci.yml  deploy.yml  test.yml
async/: BUILD.bazel  async.go  req.go
async/parsed/: BUILD.bazel  parsed.go
azure/azblob/: BUILD.bazel  azblob.go
azure/azcreds/: BUILD.bazel  azcreds.go
azure/azevents/: BUILD.bazel  azevents.go
azure/azlog/: BUILD.bazel  azlog.go
azure/aztask/: BUILD.bazel  aztask.go
blob/: BUILD.bazel  blob.go  blob_test.go
cmd/dashboard/: BUILD.bazel  README.md  main.go
cmd/dashboard/configs/: dev.conf  local.conf  test.conf
cmd/parser/: BUILD.bazel  README.md  main.go
cmd/parser/configs/: dev.conf  local.conf  test.conf
cmd/parser/taskrunner/: BUILD.bazel  taskrunner.go
cmd/runner/: BUILD.bazel  README.md  README.md2  main.go
cmd/runner/configs/: dev.conf  local.conf  test.conf
cmd/runner/taskrunner/: BUILD.bazel  taskrunner.go
cmd/server/: BUILD.bazel  README.md  main.go
cmd/server/configs/: dev.conf  local.conf  test.conf
cmd/server/configs/secrets/: dev.enc.json  local.enc.json
cmd/server/pactasrv/: BUILD.bazel  admin.go  analysis.go  audit_logs.go  authz.go  blobs.go  conv_oapi_to_pacta.go  conv_pacta_to_oapi.go  error.go  incomplete_upload.go  initiative.go  initiative_invitation.go  initiative_portfolio_relationship.go  initiative_user_relationship.go  limits.go  limits_test.go  pacta_version.go  pactasrv.go  pactasrv_test.go  parallel.go  populate.go  portfolio.go  portfolio_group.go  upload.go  user.go
cmd/server/pactasrv/conv/: BUILD.bazel  conv_test.go  helpers.go  oapi_to_pacta.go  pacta_to_oapi.go
cmd/tools/genjwt/: BUILD.bazel  main.go
cmd/tools/migratesqldb/: BUILD.bazel  main.go
cmd/tools/migratesqldb/cmd/: BUILD.bazel  cmd.go
db/: BUILD.bazel  README.md  db.go  queries.go
db/sqldb/: BUILD.bazel  analysis.go  analysis_artifact.go  analysis_artifact_test.go  analysis_test.go  audit_log.go  audit_log_test.go  blob.go  blob_test.go  cursor.go  cursor_test.go  incomplete_upload.go  incomplete_upload_test.go  initiative.go  initiative_invitation.go  initiative_invitation_test.go  initiative_test.go  initiative_user.go  initiative_user_test.go  merge.go  merge_test.go  owner.go  owner_test.go  pacta_version.go  pacta_version_test.go  populate.go  portfolio.go  portfolio_group.go  portfolio_group_test.go  portfolio_initiative.go  portfolio_initiative_test.go  portfolio_test.go  snapshot.go  snapshot_test.go  sqldb.go  sqldb_test.go  user.go  user_test.go
db/sqldb/golden/: BUILD.bazel  human_readable_schema.sql  schema_dump.sql
db/sqldb/golden/regen/humanreadableschema/: BUILD.bazel  humanreadableschema.go
db/sqldb/golden/regen/schemadump/: BUILD.bazel  schemadump.go
db/sqldb/migrations/: 0001_create_schema_migrations_history.down.sql  0001_create_schema_migrations_history.up.sql  0002_account_table.down.sql  0002_account_table.up.sql  0003_domain_types.down.sql  0003_domain_types.up.sql  0004_audit_log_tweaks.down.sql  0004_audit_log_tweaks.up.sql  0005_json_blob_type.down.sql  0005_json_blob_type.up.sql  0006_initiative_primary_key.down.sql  0006_initiative_primary_key.up.sql  0007_audit_log_actor_type.down.sql  0007_audit_log_actor_type.up.sql  0008_indexes_on_blob_ids.down.sql  0008_indexes_on_blob_ids.up.sql  0009_add_transfer_audit_log_action.down.sql  0009_add_transfer_audit_log_action.up.sql  0009_audit_log_enum_values.down.sql  0009_support_user_merge.down.sql  0009_support_user_merge.up.sql  0010_audit_log_enum_values.up.sql  0011_add_report_file_types.down.sql  0011_add_report_file_types.up.sql  0012_portfolio_properties.down.sql  0012_portfolio_properties.up.sql  0013_user_search.down.sql  0013_user_search.up.sql  0014_add_more_report_file_types.down.sql  0014_add_more_report_file_types.up.sql  0015_add_more_report_file_types.up.sql  0016_add_dashboard_analysis_type.down.sql  0016_add_dashboard_analysis_type.up.sql  0016_add_more_report_file_types.down.sql  BUILD.bazel  migrations_test.go
dockertask/: BUILD.bazel  dockertask.go
executors/docker/: BUILD.bazel  docker.go
executors/local/: BUILD.bazel  local.go
frontend/: .eslintrc.json  .gitignore  .stylelintrc.json  README.md  app.vue  error.vue  i18n.config.ts  nuxt.config.ts  package-lock.json  package.json  swa-cli.config.json
frontend/components/: AdminDebugEnabledToggleButton.vue  BulkActionsDrawer.vue  CalendarRangeWithISOModel.vue  CommonAccordionHeader.vue  CopyToClipboardButton.vue  DownloadButton.vue  ExplicitInputSwitch.vue  ExplicitTriStateCheckbox.vue  GoogleDocPage.vue  IconButton.vue  LinkButton.vue  RMILogo.vue  SharedToPublicToggleButton.vue  TitleBar.vue
frontend/composables/: newModal.ts  useAPI.ts  useInitiativeData.ts  useIsAuthenticated.ts  useLocalStorage.ts  useMSAL.ts  useModal.ts  useMyDataURLs.ts  usePACTA.ts  useSession.ts  useSignIn.ts  useSimpleAsyncData.ts  useStateIDGenerator.ts  useTime.ts  useURLParams.ts
frontend/envs/: env.dev  env.local  env.test
frontend/globalimports/: present.ts
frontend/lang/: en.json
frontend/layouts/: default.vue
frontend/middleware/: admin.ts  validate-nav-i18n.global.ts
frontend/modules/: auto-import-eslint.ts
frontend/pages/: me.vue  (+12 more)
keyutil/: BUILD.bazel  keyutil.go  keyutil_test.go
oapierr/: BUILD.bazel  oapierr.go
openapi/: BUILD.bazel  pacta.yaml  user.yaml
pacta/: BUILD.bazel  clone_test.go  email.go  email_is_domain.go  email_test.go  enum_test.go  pacta.go  populate.go
reportsrv/: BUILD.bazel  reportsrv.go  reportsrv_test.go
scripts/: BUILD.bazel  build_and_load_dashboard.sh  build_and_load_parser.sh  build_and_load_runner.sh  db_shell.sh  jumphost.sh  regen_db_goldens.sh  rollback_db.sh  run_db.sh  run_genjwt.sh  run_keygen.sh  run_server.sh  run_workflow.sh
scripts/shared/: BUILD.bazel  kv.sh  migrate.sh
secrets/: BUILD.bazel  README.md  local.enc.json  secrets.go  secrets_test.go
session/: BUILD.bazel  session.go
task/: BUILD.bazel  task.go
taskrunner/: BUILD.bazel  taskrunner.go
(+105 files in other folders)
