load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:resolve go github.com/RMI/pacta/openapi/pacta //openapi:pacta_generated
# gazelle:prefix github.com/RMI/pacta
# gazelle:exclude frontend/
# gazelle:exclude .postgres-data
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "pacta",
    srcs = ["pacta.go"],
    importpath = "github.com/RMI/pacta",
    visibility = ["//visibility:public"],
)
