load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:resolve go github.com/RMI/pacta/openapi/pacta //openapi:pacta_generated
# gazelle:prefix github.com/RMI/pacta
# gazelle:exclude frontend/
# gazelle:exclude .postgres-data
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
