load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "async",
    srcs = [
        "async.go",
        "req.go",
    ],
    importpath = "github.com/RMI/pacta/async",
    visibility = ["//visibility:public"],
    deps = [
        "//async/parsed",
        "//blob",
        "//pacta",
        "//task",
        "@com_github_azure_azure_sdk_for_go_sdk_azcore//to",
        "@com_github_azure_azure_sdk_for_go_sdk_messaging_azeventgrid//publisher",
        "@com_github_google_uuid//:uuid",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap_exp//zapfield",
    ],
)
