load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "secrets",
    srcs = ["secrets.go"],
    importpath = "github.com/RMI/pacta/secrets",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgx_v5//pgxpool",
        "@org_mozilla_go_sops_v3//decrypt",
    ],
)

go_test(
    name = "secrets_test",
    srcs = ["secrets_test.go"],
    data = ["@org_mozilla_go_sops_v3//cmd/sops"],
    embed = [":secrets"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgconn",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_silicon_ally_testsops//:testsops",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
