load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "azblob",
    srcs = ["azblob.go"],
    importpath = "github.com/RMI/pacta/azure/azblob",
    visibility = ["//visibility:public"],
    deps = [
        "//blob",
        "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
        "@com_github_azure_azure_sdk_for_go_sdk_azcore//to",
        "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//:azblob",
        "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//sas",
        "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//service",
    ],
)
