load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "azevents",
    srcs = ["azevents.go"],
    importpath = "github.com/RMI/pacta/azure/azevents",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_chi_chi_v5//:chi",
        "@org_uber_go_zap//:zap",
    ],
)
