load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/RMI/pacta/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/server/pactasrv",
        "//db/sqldb",
        "//keyutil",
        "//openapi:pacta_generated",
        "@com_github_deepmap_oapi_codegen//pkg/chi-middleware",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
        "@com_github_go_chi_httprate//:httprate",
        "@com_github_go_chi_jwtauth_v5//:jwtauth",
        "@com_github_jackc_pgx_v4//pgxpool",
        "@com_github_namsral_flag//:flag",
        "@com_github_rs_cors//:cors",
        "@com_github_silicon_ally_zaphttplog//:zaphttplog",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "configs",
    srcs = glob(["configs/**"]),
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "configs_tar",
    srcs = [":configs"],
    package_dir = "/configs",
    strip_prefix = "/cmd/server/configs",
)

pkg_tar(
    name = "server_tar",
    srcs = [":server"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/server"],
    tars = [
        ":server_tar",
        ":configs_tar",
    ],
)

oci_push(
    name = "push_image",
    image = ":image",
    remote_tags = ["latest"],
    repository = "TODO",
)

# Note: This tarball is provided for local testing of the Docker image, see the README.md for details on usage.
oci_tarball(
    name = "image_tarball",
    image = ":image",
    repo_tags = [],
)
