load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sqldb",
    srcs = [
        "analysis.go",
        "analysis_artifact.go",
        "audit_log.go",
        "blob.go",
        "cursor.go",
        "incomplete_upload.go",
        "initiative.go",
        "initiative_invitation.go",
        "initiative_user.go",
        "merge.go",
        "owner.go",
        "pacta_version.go",
        "portfolio.go",
        "portfolio_group.go",
        "portfolio_initiative.go",
        "snapshot.go",
        "sqldb.go",
        "user.go",
    ],
    importpath = "github.com/RMI/pacta/db/sqldb",
    visibility = ["//visibility:public"],
    deps = [
        "//db",
        "//pacta",
        "@com_github_hashicorp_go_multierror//:go-multierror",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgconn",
        "@com_github_jackc_pgx_v5//pgtype",
        "@com_github_silicon_ally_cryptorand//:cryptorand",
        "@com_github_silicon_ally_idgen//:idgen",
    ],
)

go_test(
    name = "sqldb_test",
    size = "large",
    srcs = [
        "analysis_artifact_test.go",
        "analysis_test.go",
        "audit_log_test.go",
        "blob_test.go",
        "cursor_test.go",
        "incomplete_upload_test.go",
        "initiative_invitation_test.go",
        "initiative_test.go",
        "initiative_user_test.go",
        "merge_test.go",
        "owner_test.go",
        "pacta_version_test.go",
        "portfolio_group_test.go",
        "portfolio_initiative_test.go",
        "portfolio_test.go",
        "snapshot_test.go",
        "sqldb_test.go",
        "user_test.go",
    ],
    data = [
        "//db/sqldb/golden",
        "//db/sqldb/migrations",
    ],
    embed = [":sqldb"],
    deps = [
        "//db",
        "//pacta",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_silicon_ally_idgen//:idgen",
        "@com_github_silicon_ally_testpgx//:testpgx",
        "@com_github_silicon_ally_testpgx//migrate",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
