load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "docker",
    srcs = ["docker.go"],
    importpath = "github.com/RMI/pacta/executors/docker",
    visibility = ["//visibility:public"],
    deps = [
        "//pacta",
        "@com_github_docker_docker//api/types",
        "@com_github_docker_docker//api/types/container",
        "@com_github_docker_docker//client",
        "@com_github_docker_docker//pkg/stdcopy",
        "@com_github_opencontainers_image_spec//specs-go/v1:specs-go",
        "@org_uber_go_zap//:zap",
    ],
)
