load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pactasrv",
    srcs = [
        "conv_oapi_to_pacta.go",
        "conv_pacta_to_oapi.go",
        "error.go",
        "initiative.go",
        "pacta_version.go",
        "pactasrv.go",
        "user.go",
    ],
    importpath = "github.com/RMI/pacta/cmd/server/pactasrv",
    visibility = ["//visibility:public"],
    deps = [
        "//db",
        "//openapi:pacta_generated",
        "//pacta",
        "@com_github_go_chi_jwtauth_v5//:jwtauth",
    ],
)
