load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pactasrv",
    srcs = [
        "initiative.go",
        "pacta_version.go",
        "pactasrv.go",
        "user.go",
    ],
    importpath = "github.com/RMI/pacta/cmd/server/pactasrv",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/server/pactasrv/conv",
        "//db",
        "//oapierr",
        "//openapi:pacta_generated",
        "//pacta",
        "//task",
        "@com_github_go_chi_jwtauth_v5//:jwtauth",
        "@org_uber_go_zap//:zap",
    ],
)
