load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pactasrv",
    srcs = [
        "incomplete_upload.go",
        "initiative.go",
        "initiative_invitation.go",
        "initiative_user_relationship.go",
        "pacta_version.go",
        "pactasrv.go",
        "parallel.go",
        "portfolio.go",
        "upload.go",
        "user.go",
    ],
    importpath = "github.com/RMI/pacta/cmd/server/pactasrv",
    visibility = ["//visibility:public"],
    deps = [
        "//blob",
        "//cmd/server/pactasrv/conv",
        "//db",
        "//oapierr",
        "//openapi:pacta_generated",
        "//pacta",
        "//session",
        "//task",
        "@com_github_go_chi_jwtauth_v5//:jwtauth",
        "@com_github_google_uuid//:uuid",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
