load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["cmd.go"],
    data = [
        "//db/sqldb/migrations",
    ],
    importpath = "github.com/RMI/pacta/cmd/tools/migratesqldb/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//secrets",
        "@com_github_jackc_pgx_v4//pgxpool",
        "@com_github_silicon_ally_testpgx//migrate",
        "@com_github_spf13_cobra//:cobra",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
