load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["cmd.go"],
    data = [
        "//db/sqldb/migrations",
    ],
    importpath = "github.com/RMI/pacta/cmd/tools/migratesqldb/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database/pgx/v5:pgx",
        "@com_github_golang_migrate_migrate_v4//source/file",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_spf13_cobra//:cobra",
        "@io_bazel_rules_go//go/runfiles:go_default_library",
    ],
)
