load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "schemadump_lib",
    srcs = ["schemadump.go"],
    importpath = "github.com/RMI/pacta/db/sqldb/golden/regen/schemadump",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_jackc_pgx_v4//pgxpool",
        "@com_github_silicon_ally_testpgx//:testpgx",
        "@com_github_silicon_ally_testpgx//migrate",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

go_binary(
    name = "schemadump",
    data = ["//db/sqldb/migrations"],
    embed = [":schemadump_lib"],
    visibility = ["//visibility:public"],
)
